src/app/facevideo/facevideo.component.less
@import '../../common.less';

:host {
    width: 100%;
    height: 100%;

    > * {
        .layer;
    }

    .overlay {
        display: flex;
        flex-flow: column;
        align-items: center;
        justify-content: center;
    }

    svg {
        width: 90%;
        height: 90%;
        display: block;

        opacity: 0.4;
        transition-property: opacity;
        transition-duration: 0s;

        path {
            fill: @yellow;
            transition-property: fill;
            transition-duration: 3s;
        }

        &.active {
            opacity: 0;
            transition-duration: 3s;
            path {
                fill: @green;
                transition-duration: 1s;
            }
        }

        &.failed {
            opacity: 0.4;
            transition-duration: 0s;
            path {
                fill: @red;
                transition-duration: 0s;
            }
        }
    }
}

